<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="contactsIconLabel">Contacts</string>
    <string name="contactsFavoritesLabel">Favorites</string>
    <string name="dialerIconLabel">Dialer</string>
    <string name="emergencyDialerIconLabel">Emergency Dialer</string>
    <string name="phoneIconLabel">Phone</string>
    <string name="recentCallsIconLabel">Call log</string>
    <string name="fdnListLabel">FDN list</string>
    <string name="unknown">Unknown</string>
    <string name="private_num">Private number</string>
    <string name="payphone">Pay phone</string>
    <string name="onHold">On hold</string>
    <string name="ongoing">Current call</string>
    <string name="callFailed_userBusy">Line busy</string>
    <string name="callFailed_congestion">Network busy</string>
    <string name="callFailed_timedOut">No response, timed out</string>
    <string name="callFailed_server_unreachable">Server unreachable</string>
    <string name="callFailed_number_unreachable">Number unreachable</string>
    <string name="callFailed_invalid_credentials">Incorrect username or password</string>
    <string name="callFailed_out_of_network">Called from out of network</string>
    <string name="callFailed_server_error">Server error. Try again later.</string>
    <string name="callFailed_noSignal">No signal</string>
    <string name="callFailed_limitExceeded">ACM limit exceeded</string>
    <string name="callFailed_powerOff">Radio off</string>
    <string name="callFailed_simError">No SIM, or SIM error</string>
    <string name="callFailed_outOfService">Out of service area</string>
    <string name="callFailed_fdn_only">Outgoing calls are restricted by FDN.</string>
    <string name="callFailed_cb_enabled">You cannot make outgoing calls while call barring is on.</string>
    <string name="callFailed_dialToUssd">DIAL request modified to USSD request.</string>
    <string name="callFailed_dialToSs">DIAL request modified to SS request.</string>
    <string name="callFailed_dialToDial">DIAL request modified to DIAL with different number.</string>
    <string name="callFailed_dsac_restricted">All calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_emergency">Emergency calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_normal">Normal calls are restricted by access control.</string>
    <string name="callFailed_cdma_lockedUntilPowerCycle">CDMA: Phone locked until power cycle.</string>
    <string name="callFailed_cdma_drop">CDMA: Call dropped.</string>
    <string name="callFailed_cdma_intercept">CDMA: Call intercepted.</string>
    <string name="callFailed_cdma_reorder">CDMA: reorder.</string>
    <string name="callFailed_cdma_SO_reject">CDMA: Service Option Reject.</string>
    <string name="callFailed_cdma_retryOrder">CDMA: retry order.</string>
    <string name="callFailed_cdma_accessFailure">CDMA: Access failure.</string>
    <string name="callFailed_cdma_preempted">CDMA: Preempted.</string>
    <string name="callFailed_cdma_notEmergency">Only Emergency calls are possible.</string>
    <string name="callFailed_unobtainable_number">Invalid Number</string>
    <string name="confCall">Conference call</string>
    <string name="call_lost">Call has been lost.</string>
    <string name="callUnanswered_forwarded">Call Unanswered and Forwarded</string>
    <string name="retry">Retry</string>
    <string name="call_lost_title">Call Lost</string>
    <string name="mmiStarted">MMI code started</string>
    <string name="ussdRunning">USSD code running\u2026</string>
    <string name="mmiCancelled">MMI code canceled</string>
    <string name="cancel">Cancel</string>
    <string name="menu_speaker">Speaker</string>
    <string name="menu_bluetooth">Bluetooth</string>
    <string name="menu_mute">Mute</string>
    <string name="menu_hold">Hold</string>
    <string name="menu_endCall">End call</string>
    <string name="menu_swapCalls">Swap or end calls</string>
    <string name="menu_mergeCalls">Merge calls</string>
    <string name="menu_addCall">Add call</string>
    <string name="menu_manageConference">Manage conference call</string>
    <string name="menu_showDialpad">Show dialpad</string>
    <string name="menu_hideDialpad">Hide dialpad</string>
    <string name="menu_answerAndHold">Hold current call\n&amp; answer</string>
    <string name="menu_answerAndEnd">End current call\n&amp; answer</string>
    <string name="ok">OK</string>
    <string name="menuButtonHint">Press Menu for call options.</string>
    <string name="menuButtonKeyboardDialHint">"Press Menu for call options  \u2022  Use keyboard to dial"</string>
    <string name="menu_answer">Answer</string>
    <string name="menu_ignore">Ignore</string>
    <string name="wait_prompt_str">Send the following tones?\n</string>
    <string name="pause_prompt_str">Sending Tones\n</string>
    <string name="send_button">Send</string>
    <string name="pause_prompt_yes">Yes</string>
    <string name="pause_prompt_no">No</string>
    <string name="wild_prompt_str">Replace the wild character with</string>
    <string name="no_vm_number">Missing voicemail number</string>
    <string name="no_vm_number_msg">No voicemail number is stored on the SIM card.</string>
    <string name="add_vm_number_str">Add number</string>
    <string name="dialer_emptyListWorking">Loading\u2026</string>
    <string name="enterPin">Type PIN code to unlock SIM card.</string>
    <string name="pinUnlocked">SIM unlocked</string>
    <string name="enterNewPin">New SIM PIN code</string>
    <string name="verifyNewPin">Type new SIM PIN code again to confirm</string>
    <string name="verifyFailed">The SIM PINs you typed do not match. Please try again.</string>
    <string name="enterPuk">Type PUK code to unlock SIM card</string>
    <string name="badPuk">Incorrect PUK code!</string>
    <string name="buttonTxtContinue">Continue</string>
    <string name="puk_unlocked">Your SIM card has been unblocked. Your phone is unlocking\u2026</string>
    <string name="label_ndp">SIM network unlock PIN</string>
    <string name="label_nsdp">SIM network subset unlock PIN</string>
    <string name="label_cdp">SIM corporate unlock PIN</string>
    <string name="label_spdp">SIM service provider unlock PIN</string>
    <string name="label_sdp">SIM SIM unlock PIN</string>
    <string name="label_rn1dp">RUIM network1 unlock PIN</string>
    <string name="label_rn2dp">RUIM network2 unlock PIN</string>
    <string name="label_rhrpd">RUIM hrpd unlock PIN</string>
    <string name="label_rcdp">RUIM corporate unlock PIN</string>
    <string name="label_rspdp">RUIM service provider unlock PIN</string>
    <string name="label_rdp">RUIM RUIM unlock PIN</string>
    <string name="label_subscription">for Subscription</string>
    <string name="sim_ndp_unlock_text">Unlock</string>
    <string name="sim_ndp_dismiss_text">Dismiss</string>
    <string name="requesting_unlock">Requesting network unlock\u2026</string>
    <string name="requesting_nw_subset_unlock">Requesting SIM network subset unlock\u2026</string>
    <string name="requesting_sp_unlock">Requesting SIM service provider unlock\u2026</string>
    <string name="requesting_corporate_unlock">Requesting SIM corporate unlock\u2026</string>
    <string name="requesting_sim_unlock">Requesting SIM SIM unlock\u2026</string>
    <string name="requesting_rnw1_unlock">Requesting RUIM network1 unlock\u2026</string>
    <string name="requesting_rnw2_unlock">Requesting RUIM network2 unlock\u2026</string>
    <string name="requesting_rhrpd_unlock">Requesting RUIM hrpd unlock\u2026</string>
    <string name="requesting_rsp_unlock">Requesting RUIM service provider unlock\u2026</string>
    <string name="requesting_rc_unlock">Requesting RUIM corporate unlock\u2026</string>
    <string name="requesting_ruim_unlock">Requesting RUIM RUIM unlock\u2026</string>
    <string name="unlock_failed">Network unlock request unsuccessful.</string>
    <string name="nw_subset_unlock_failed">SIM Network Subset unlock request unsuccessful.</string>
    <string name="sp_unlock_failed">SIM Service Provider unlock request unsuccessful.</string>
    <string name="corporate_unlock_failed">SIM Corporate unlock request unsuccessful.</string>
    <string name="sim_unlock_failed">SIM SIM unlock request unsuccessful.</string>
    <string name="rnw1_unlock_failed">RUIM Network1 unlock request unsuccessful.</string>
    <string name="rnw2_unlock_failed">RUIM Network2 unlock request unsuccessful.</string>
    <string name="rhrpd_unlock_failed">RUIM Hrpd unlock request unsuccessful.</string>
    <string name="rsp_unlock_failed">RUIM Service Provider unlock request unsuccessful.</string>
    <string name="rc_unlock_failed">RUIM Corporate unlock request unsuccessful.</string>
    <string name="ruim_unlock_failed">RUIM RUIM unlock request unsuccessful.</string>
    <string name="unlock_success">Network unlock successful.</string>
    <string name="nw_subset_unlock_success">SIM Network Subset unlock successful.</string>
    <string name="sp_unlock_success">SIM Service Provider unlock successful.</string>
    <string name="corporate_unlock_success">SIM Corporate unlock successful.</string>
    <string name="sim_unlock_success">SIM SIM unlock successful.</string>
    <string name="rnw1_unlock_success">RUIM Network1 unlock successful.</string>
    <string name="rnw2_unlock_success">RUIM Network2 unlock successful.</string>
    <string name="rhrpd_unlock_success">RUIM Hrpd unlock successful.</string>
    <string name="rsp_unlock_success">RUIM Service Provider unlock successful.</string>
    <string name="rc_unlock_success">RUIM Corporate unlock successful.</string>
    <string name="ruim_unlock_success">RUIM RUIM unlock successful.</string>
    <string name="imei">IMEI</string>
    <string name="meid">MEID</string>
    <string name="labelGSMMore">GSM call settings</string>
    <string name="labelCDMAMore">CDMA call settings</string>
    <string name="apn_settings">Access Point Names</string>
    <string name="call_settings">Call settings</string>
    <string name="additional_cdma_call_settings">Additional CDMA call settings</string>
    <string name="labelCW">Call waiting</string>
    <string name="labelCF">Call forwarding</string>
    <string name="callind_multi_sim">Dual SIM settings</string>
    <string name="summary_call_settings">Set voice mail, call options etc</string>
    <string name="voice_privacy">Voice Privacy</string>
    <string name="voice_privacy_summary">Enable enhanced privacy mode</string>
    <string name="tty_mode_option_title">TTY mode</string>
    <string name="tty_mode_option_summary">Set TTY mode</string>
    <string name="auto_retry_mode_title">Auto Retry</string>
    <string name="auto_retry_mode_summary">Enable Auto Retry mode</string>
    <string name="hac_mode_title">Hearing aids</string>
    <string name="hac_mode_summary">Turn on hearing aid compatibility</string>
    <string name="dtmf_tones_title">DTMF Tones</string>
    <string name="dtmf_tones_summary">Set the length of DTMF tones</string>
    <string name="reject_call_settings">Reject call settings</string>
    <string name="reject_call_message">Reject call with message</string>
    <string name="enable_reject_call_with_sms">Reject call with message is enabled</string>
    <string name="disable_reject_call_with_sms">Reject call with message is disabled</string>
    <string name="edit_message_template_title">Message template</string>
    <string name="edit_message_template_summary">Edit text message template</string>
    <string name="CFActivate">Activate</string>
    <string name="CFDeactivate">Deactivate</string>
    <string name="display_home_location_settings">display home location</string>
    <string name="enable_display_home_location">display home location is enabled</string>
    <string name="disable_display_home_location">display home location is disabled</string>
</resources>