<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2011, Code Aurora Forum. All rights reserved.
     Copyright (C) 2008 The Android Open Source Project

Licensed under the Apache License, Version 2.0 (the "License"); you
may not use this file except in compliance with the License.  You may
obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
implied.  See the License for the specific language governing
permissions and limitations under the License.
 -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.phone"
    android:title="@string/additional_cdma_call_settings">
    <PreferenceScreen
        android:key="button_cf_expand_key"
        android:title="@string/labelCF"
        android:persistent="false">

        <intent android:action="android.intent.action.MAIN"
            android:targetPackage="com.android.phone"
            android:targetClass="com.android.phone.CdmaCallForwardOptions"/>
    </PreferenceScreen>

    <PreferenceScreen
        android:key="button_cw_key"
        android:title="@string/labelCW"
        android:persistent="false">
        <PreferenceScreen
            android:key="button_cw_act_key"
            android:title="@string/CFActivate">
            <intent
                android:action="android.intent.action.CALL_PRIVILEGED"
                android:targetPackage="com.android.phone"
                android:targetClass="com.android.phone.OutgoingCallBroadcaster" />
        </PreferenceScreen>
        <PreferenceScreen
            android:key="button_cw_deact_key"
            android:title="@string/CFDeactivate">
            <intent
                android:action="android.intent.action.CALL_PRIVILEGED"
                android:targetPackage="com.android.phone"
                android:targetClass="com.android.phone.OutgoingCallBroadcaster" />
        </PreferenceScreen>
    </PreferenceScreen>

    <com.android.phone.CdmaVoicePrivacyCheckBoxPreference
        android:key="button_voice_privacy_key"
        android:title="@string/voice_privacy"
        android:persistent="false"
        android:summary="@string/voice_privacy_summary"/>
</PreferenceScreen>
